...
  fio_src_wallet: 'Pay From Wallet',
  submit: 'Submit',
  login: 'Login',
  help_build: 'Build',
  help_modal_title_thanks: 'Thanks for using %1$s!',
  help_version: 'Version',
  help_knowledge_base: 'Knowledge Base',
  help_knowledge_base_text: 'Commonly asked questions and FAQ',
  help_support: 'Submit a Support Ticket',
  help_support_text: 'Troubleshooting and technical support',
  help_call: 'Call for Assistance',
  help_call_text: 'Get in touch by phone',
  help_visit_site: 'Visit the %1$s site',
  help_site_more_info_text: 'More info on %1$s',
  help_terms_of_service_text: 'Understand your obligations and risks associated with our platform',
  loading: 'Loading…',
  validating: 'Validating…',
...
  string_first_pulsechain_wallet_name: 'My PulseChain',
  string_first_avalanche_wallet_name: 'My Avalanche',
  string_first_optimism_wallet_name: 'My Optimism',
  string_first_algorand_wallet_name: 'My Algorand',
  string_first_zksync_wallet_name: 'My zkSync',
  my_crypto_wallet_name: 'My %s',
  string_help: 'Help',
  string_exit: 'Exit',
  string_next: 'NEXT',
  string_next_capitalized: 'Next',
  string_no_name: 'No name',
  string_ok: 'OK',
  string_paste: 'Paste',
...
  title_plugin_sell: 'Sell Cryptocurrency',
  title_otp: '2-Factor Security',
  title_register_fio_address: 'Register FIO Address',
  title_register_fio_domain: 'Register FIO Domain',
  title_settings: 'Settings',
  title_promotion_settings: 'Promotion Settings',
  title_terms_of_service: 'Terms of Service',
  title_markets: 'Markets',
  title_wallets: 'Wallets',
  title_buy: 'Buy',
  title_sell: 'Sell',
  title_map: 'Map',
  no_exchanges_available: 'No Exchanges Enabled',
...
